feat: P4ADEV-1754 configuring inner security (#77)